--- a/KeyDetail.ui
+++ b/KeyDetail.ui
@@ -11,7 +11,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>470</width>
+            <width>466</width>
             <height>349</height>
         </rect>
     </property>
@@ -766,7 +766,7 @@
             </property>
             <property stdset="1">
                 <name>textFormat</name>
-                <enum>PlainText</enum>
+                <enum>AutoText</enum>
             </property>
         </widget>
         <widget>
@@ -788,7 +788,7 @@
                     <class>QPushButton</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>PushButton1</cstring>
+                        <cstring>but_ok</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
@@ -824,7 +824,7 @@
                     <class>QPushButton</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>PushButton2</cstring>
+                        <cstring>but_cancel</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
@@ -837,19 +837,19 @@
 </widget>
 <connections>
     <connection>
-        <sender>PushButton2</sender>
+        <sender>but_cancel</sender>
         <signal>clicked()</signal>
         <receiver>KeyDetail_UI</receiver>
         <slot>reject()</slot>
     </connection>
     <connection>
-        <sender>PushButton1</sender>
+        <sender>but_ok</sender>
         <signal>clicked()</signal>
         <receiver>KeyDetail_UI</receiver>
         <slot>accept()</slot>
     </connection>
     <connection>
-        <sender>PushButton1</sender>
+        <sender>but_ok</sender>
         <signal>clicked()</signal>
         <receiver>KeyDetail_UI</receiver>
         <slot>accept()</slot>
